# BERTrend

./: .coveragerc  .env  .env_template  .gitignore  AUTHORS.txt  Dockerfile  Dockerfile.embedding_server  README.md  copyright.txt  docker-compose.yml  pyproject.toml  run_compose_script.sh  run_demos.sh  supervisord.conf
.github/workflows/: black.yml  docker-publish.yml  publish.yml  pytest.yaml  version-increment.yml
bertrend/: BERTopicModel.py  BERTrend.py  TopicModel.py  __init__.py  bertrend.py  bertrend.toml  bertrend_default_config.toml  parameters.py  topic_model.py  train.py  utils.py
bertrend/app/: Main_page.py  app_utils.py  data_utils.py
bertrend/app/pages/: 1_Explore_Topics.py  4_Generate_Newsletters.py  6_Visualizations.py  7_Temporal_Visualizations.py
bertrend/article_scoring/: article_scoring.py  prompts.py  scoring_agent.py
bertrend/common/: cache_utils.py  openai_client.py  prompts.py
bertrend/config/: bertopic_default_config.toml  bertrend_default_config.toml  parameters.py  services_default_config.toml
bertrend/demos/: start_summarizer_app.sh  start_topic_analysis_app.sh  start_weak_signals_app.sh
bertrend/demos/demos_utils/: __init__.py  data_loading_component.py  embed_documents_component.py  i18n.py  i18n_translations.py  icons.py  messages.py  parameters_component.py  session_state_manager.py  state_utils.py
bertrend/demos/streamlit_components/: input_with_pills_component.py  input_with_pills_components.py
bertrend/demos/summarization/: summarizer_app.py
bertrend/demos/topic_analysis/: Main_page.py  app.py  app_utils.py  data_utils.py  i18n_translations.py  messages.py
bertrend/demos/weak_signals/: app.py  i18n_translations.py  messages.py  session_state_manager.py  visualizations_utils.py
bertrend/llm_utils/: agent_utils.py  newsletter.css  newsletter_features.py  newsletter_model.py  newsletter_outlook_template.html  newsletter_template.html  openai_client.py  prompts.py
bertrend/metrics/: metrics.py  temporal_metrics.py  temporal_metrics_embedding.py  topic_metrics.py
bertrend/resources/: common_ngrams.json  stopwords-rte.json  topic_model_config_example.toml
bertrend/services/: authentication.py  cert.pem  embedding_client.py  embedding_service.py  key.pem  summarizer.py
bertrend/services/embedding_server/: README.md  bertrend_client_registry.json  main.py  models.py  requirements.txt  security.py  start.py  status.py  stop.py
bertrend/services/scheduling/: .dockerignore  Docker_setup.md  Dockerfile  dashboard.html  docker-compose.yml  docker-compose.yml   requirements.txt  scheduling_service.py
bertrend/services/summary/: __init__.py  abstractive_summarizer.py  lexrank.py  (+3 more)
bertrend/summary/: __init__.py  abstractive_summarizer.py  app.py  chatgpt_summarizer.py  extractive_summarizer.py  start_summarizer_app.sh
bertrend/tests/: README_integration_tests.md  conftest.py  test_abstractive_summarizer.py  test_agent_utils.py  test_apscheduler_utils.py  test_article_scoring.py  test_article_scoring_models.py  test_bertrend.py  test_cache_utils.py  test_chatgpt_summarizer.py  test_config_utils.py  test_data_loading.py  test_data_provider_service.py  test_data_structure.py  test_embedding_client.py  test_extractive_summarizer.py  test_installation.py  test_integration.py  test_mail_utils.py  test_newsletter_features.py  test_newsletter_model.py  test_openai_client.py  test_representative_docs.py  test_scheduler_utils.py  test_scheduling_service.py  test_summarizer.py  test_temporal_metrics_embedding.py  test_topic_description.py  test_topic_metrics.py  test_topic_model.py  test_trend_analysis_data_structure.py  test_trend_analysis_prompts.py  test_trend_analysis_visualizations.py  test_trend_analysis_weak_signals.py  test_utils_init.py  test_visualizations.py
bertrend/topic_analysis/: Main_page.py  app_utils.py  data_structure.py  data_utils.py  prompts.py  representative_docs.py  state_utils.py  topic_description.py  visualizations.py
bertrend/topic_model/: topic_model.py  topic_model_default_config.toml
bertrend/trend_analysis/: data_structure.py  prompts.py  signal_llm_template_en.html  signal_llm_template_fr.html  topic_modeling.py  visualizations.py  weak_signals.py
bertrend/utils/: __init__.py  cache_utils.py  config_utils.py  data_loading.py
bertrend/weak_signals/: app.py  data_loading.py  global_vars.py  messages.py  prompts.py  signal_llm.html  signal_llm_template_fr.html  topic_modeling.py  visualizations.py  weak_signals.py
bertrend_apps/: __init__.py  install_feeds_and_newsletters.py  start_apps.sh  stop_apps.sh
bertrend_apps/common/: apscheduler_utils.py  config_utils.py  crontab_utils.py  mail_utils.py  scheduler_utils.py
bertrend_apps/config/: gmail_credentials.json
bertrend_apps/data_provider/: __init__.py  __main__.py  arxiv_provider.py  atom_feed_provider.py  bing_news_provider.py  curebot_provider.py  data_provider.py  google_news_provider.py  newscatcher_provider.py  rss_feed_provider.py  utils.py
bertrend_apps/newsletters/: README.md  __main__.py  newsletter.css  newsletter_features.py  prompts.py
bertrend_apps/prospective_demo/: __init__.py  app.py  authentication.py  automated_report_generation.py  dashboard_analysis.py  dashboard_common.py  dashboard_comparative.py  dashboard_signals.py  data_model.py  detailed_report_template.html  feeds_common.py  feeds_config.py  feeds_data.py  i18n.py  i18n_translations.py  llm_utils.py  models_config.py  models_info.py  perf_utils.py  process_new_data.py  regenerate_past_models.py  report_generation.py  report_template.html  report_utils.py  signal_analysis.py  start_demo.sh  streamlit_utils.py  utils.py
bertrend_apps/tests/: test_process_new_data.py
data/bertopic/: reindustrialisation.jsonl  sobriete.jsonl
docs/: architecture.md  article_scoring.md  code_dependencies.md  data_provider.md  demos.md  docker.md  flows.md  mail_configuration.md  newsletters.md  prospective_demo.md  scheduler_configuration.md
docs/demos/: prospective_demo.md  topic_analysis_demo.md  weak_signals_demo.md
getting_started/: bertrend_quickstart.ipynb
(+91 files in other folders)
